# motoko

./: README.md  buildspec-dev.yml  buildspec-prod.yml  buildspec.yml  deploy_build_image  graph_data_models  install_motoko_command
backend/: db.sh  samconfig.toml  template.yaml  test_env.json
backend/gql/: deploy
backend/py/: infer_datatypes.py  invalidate_cache.py  utils.py
backend/py/common/test/data/: iris_metadata.json  iris_predictions.json
backend/py/common/test/keys/: gen.sh  test.key  test_api_key.txt
backend/py/dataview/: app.py  requirements.txt
backend/py/infer-datatypes/: main.py
backend/py/invalidate-cache/: app.py
backend/py/lambdas/infer-datatypes/: main.py
backend/py/lambdas/infer_datatypes/: main.py
backend/py/lambdas/uri-to-sql-db/: main.py  requirements.txt
backend/py/ml/common/py/: protobuf.py
backend/py/ml/protos/: enums.proto  types.proto
backend/py/ml/sdk/py/: motoko_client.py  motoko_pb2_grpc.py  protobuf.py  test.sh
backend/py/ml/sdk/ts/: enums_pb.d.ts  motoko_pb.js  package-lock.json  types_pb.d.ts
backend/py/ml/tachikoma/: categorical_encoder.py  db.py  inferer.py  remover.py  trimmer.py
backend/py/ml/tachikoma/test/: test_db.py  test_inferer.py  test_trimmer.py
backend/py/model/: Makefile  app.py  categorical_encoder.py  continuous_scaler.py  model.py  model_types.py  remover.py  requirements.txt  test_utils.py  text_encoder.py  trimmer.py
backend/py/model/tests/: test_categorical_encoder.py  test_continuous_scaler.py  test_model.py  test_remover.py  test_text_encoder.py  test_trimmer.py
backend/py/model/tests/data/: iris_metadata.json  iris_news.csv
backend/py/motoko/: go.mod  go.sum  run.sh  server.csr.cnf  setup.sh  ssl.sh  v3.ext
backend/py/motoko/internal/acctmgr/: acctmgr.go  acctmgr_test.go  init.sql
backend/py/motoko/internal/grpcsrv/: gen.sh  grpcsrv.go  grpcsrv_test.go
backend/py/motoko/internal/httpsrv/: gen.sh  httpsrv_test.go
backend/py/motoko/internal/pb/: enums.pb.go  motoko.pb.go  tachikoma.pb.go
backend/py/network-introspection/: main.py
backend/py/old_motoko/tachikoma/: enforcer.py  gen.sh  motd.txt  requirements.txt  run.sh  setup.sh  tachikoma_pb2_grpc.py  text_encoder.py  types_pb2.py  utils.py
backend/py/plot/: app.py  requirements.txt
backend/py/protos/: motoko.proto  tachikoma.proto
backend/py/sdk/py/: utils.py
backend/py/sdk/ts/: motoko_pb.d.ts  motoko_pb_service.js  test.ts
backend/py/statistic/: app.py
backend/py/tachikoma/: continuous_scaler.py  enums_pb2.py  learner.py  motd.txt  protobuf.py  replacer.py  requirements.txt  selector.py  server.py  tachikoma.py
backend/py/tachikoma/test/: test_remover.py  test_selector.py  test_text_encoder.py
backend/py/uri-to-sql-db/: app.py  main.py  requirements.txt
backend/rs/: Cargo.toml  deploy  hit
backend/rs/gql/: Cargo.toml  graph_models.sh  reset.sh  test.sh
backend/rs/gql/migrations/: 20201006192350_users.sql  20201006192820_analyses.sql  20201006192938_statistics.sql  20201006192956_plots.sql
backend/rs/gql/node_derive/: Cargo.toml
backend/rs/gql/node_derive/src/: lib.rs
backend/rs/gql/src/: auth.rs  context_data.rs  db.rs  lib.rs  models.txt  mutation.rs  node.rs  query.rs  state.rs  utils.rs
backend/rs/gql/src/models/: analysis.rs  dataset.rs  dataview.rs  mod.rs  model.rs  plot.rs  project.rs  project_user_role.rs  statistic.rs  user.rs  user_refresh_token.rs
backend/rs/gql/tests/: db.rs
backend/rs/graphql/: Cargo.toml  Makefile  connect_to_db.sh
backend/rs/graphql/data_migrations/: 20201006192220_enable_extensions.sql  20201006192222_create_functions.sql
backend/rs/graphql/meta_migrations/: 20201006192222_create_functions.sql  20201006192224_updated_at_trigger.sql  20201006192440_user_refresh_tokens.sql  20201006192526_project_user_roles.sql  20201006192637_datasets.sql  20201006192800_dataviews.sql  20201006192938_statistics.sql  20201006192956_plots.sql  20201006193021_models.sql
backend/rs/graphql/migrations/: 20201006192224_updated_at_trigger.sql  20201006192503_projects.sql  20201006192548_status.sql  20201006192800_dataviews.sql  20201006193021_models.sql
backend/rs/graphql/node_derive/: Cargo.toml
backend/rs/graphql/node_derive/src/: lib.rs
backend/rs/graphql/src/: auth.rs  context_data.rs  error.rs  gql.rs  lib.rs  mutation.rs  node.rs  queries.rs  query.rs  secrets.rs  types.rs  utils.rs
backend/rs/graphql/src/models/: analysis.rs  dataset.rs  dataview.rs  mod.rs  model.rs  plot.rs  project.rs  project_user_role.rs  statistic.rs  status.rs  user.rs  user_refresh_token.rs
backend/rs/graphql/tests/: db.rs
backend/rs/graphql/tests/data/: apigw_v2_proxy_request.json  apigw_v2_proxy_request_get.json  apigw_v2_proxy_request_me.json
build_image/: Dockerfile
deploy/: Dockerfile
design/: logo.xcf
frontend/: pubspec.yaml  run
frontend/android/: build.gradle
frontend/android/app/: build.gradle
frontend/ios/Runner/: GoogleService-Info.plist  Info.plist
frontend/ios/Runner.xcodeproj/: project.pbxproj
frontend/ios/Runner/Base.lproj/: Main.storyboard
frontend/lib/: main.dart
frontend/lib/common/: accent_color.dart  auth.dart  dialogs.dart  error_dialog.dart  form_dialog.dart  globals.dart  gql.dart  platform_svg.dart  profile.dart  storage.dart  theme.dart  tier.dart  types.dart  utils.dart
frontend/lib/pages/home/: adaptive_buttons.dart  analyses.dart  analysis.dart  data.dart  data_preview.dart  datasets.dart  home_page.dart  model.dart  models.dart  nav.dart  nav_breadcrumb.dart  permissions.dart  plot.dart  plots.dart  preview_panel.dart  profile_drawer.dart  project.dart  projects.dart  query_results_list.dart  scrollable_table.dart  searchable_list.dart  statistic.dart  statistics.dart
frontend/lib/pages/login/: login_page.dart  utils.dart
frontend/lib/pages/privacy/: privacy_page.dart
frontend/lib/pages/splash/: splash_page.dart
frontend/test/: widget_test.dart
frontend/web/: index.html  manifest.json
hooks/: pre-push
legal/privacy/: policy.md  policy.txt
motoko/: Cargo.toml
motoko/src/: args.yaml  main.rs
(+74 files in other folders)
