[package]
name = "motoko"
version = "0.1.0"
authors = ["Daniel Jenson <daniel.a.jenson@gmail.com>"]
edition = "2018"
description = "commands for orchestrating the motoko project"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.0.0-beta.2", features = ["yaml"] }
which = "4.0.2"
reqwest = { version = "0.10.9", features = ["blocking"] }
regex = "1.4.2"
rpassword = "5.0.0"
serde_json = "1.0.59"
base64 = "0.13.0"
dirs = "3.0.1"
