[package]
name = "motoko"
version = "0.1.0"
authors = ["Daniel Jenson <daniel.a.jenson@gmail.com>"]
edition = "2018"
description = "commands for orchestrating the motoko project"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.13.0"
clap = { version = "3.0.0-beta.2", features = ["yaml"] }
dirs = "3.0.1"
glob = "0.3.0"
regex = "1.4.2"
reqwest = { version = "0.10.9", features = ["blocking"] }
rpassword = "5.0.0"
rusoto_core = { version = "0.45.0", default-features=false, features=["rustls"] }
rusoto_lambda = { version = "0.45.0", default-features=false, features=["rustls"] }
serde_json = "1.0.59"
tokio = { version = "1.0.1", features = ["full"] }
tokio-compat-02 = "0.2.0"
which = "4.0.2"
