[package]
name = "motoko"
version = "0.1.0"
authors = ["Daniel Jenson <daniel.a.jenson@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1.0.114"
serde_json = "1.0.56"
serde_derive = "1.0.114"
log = "0.4.8"
simple_logger = "1.6.0"
lambda_runtime = "0.2.1"
