[package]
name = "gql"
version = "0.1.0"
authors = ["Daniel Jenson <daniel.a.jenson@gmail.com>"]
edition = "2018"

[dependencies]
anyhow = "1.0.32"
async-graphql = "2.0.0-alpha.14"
async-graphql-tide = "2.0.0-alpha.14"
async-std = { version = "1.6.4", features = ["attributes"] }
base64 = "0.12.3"
chrono = "0.4.19"
clap = "2.33.3"
dotenv = "0.15.0"
futures = "0.3.6"
jsonwebtoken = "7.2.0"
lambda_runtime = "0.2.1"
lazy_static = "1.4.0"
log = "0.4.8"
node_derive = { path = "node_derive" }
regex = "1.3.9"
serde = { version = "1.0.115", features = ["derive"] }
serde_json = "1.0.56"
simple_logger = "1.6.0"
sqlx = { version = "0.4.0-beta.1", features = ["json", "postgres", "uuid", "chrono", "macros", "offline"] }
state = "0.4.1"
surf = "1.0.3"
tide = "0.13.0"
url = { version = "2.1.1", features = ["serde"] }
uuid = { version = "0.8.1", features = ["serde", "v4"] }
