[package]
name = "graphql"
version = "0.1.0"
authors = ["Daniel Jenson <daniel.a.jenson@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-graphql = "2.1.5"
base64 = "0.13.0"
chrono = { version = "0.4.19", features = ["serde"] }
jsonwebtoken = "7.2.0"
lambda_http = { version = "0.2.0-beta.1", git = "https://github.com/awslabs/aws-lambda-rust-runtime" }
lazy_static = "1.4.0"
node_derive = { path = "node_derive" }
regex = "1.4.2"
reqwest = { version = "0.10.9", features = ["json"] }
serde = "1.0.117"
serde_json = "1.0.59"
sqlx = { version = "0.4.1", features = ["runtime-tokio-rustls", "json", "postgres", "uuid", "chrono", "macros", "offline"] }
thiserror = "1.0.22"
tokio = { version = "0.3.4", default-features = false, features = ["macros", "rt-multi-thread", "time", "stream"] }
tokio-compat-02 = "0.1.2"
uuid = "0.8.1"

[dev-dependencies]
anyhow = "1.0.34"
dotenv = "0.15.0"
