[package]
name = "node_derive"
version = "0.1.0"
authors = ["Daniel Jenson <daniel.a.jenson@gmail.com>"]
edition = "2018"

[lib]
proc-macro = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
syn = { version = "1.0.51", features = ["full"] }
quote = "1.0.7"
base64 = "0.13.0"
proc-macro2 = "1.0.24"
